--- a/clock/index.html
+++ b/clock/index.html
@@ -11,7 +11,7 @@
 
   <title>Digital Clock</title>
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/clock/style.css">
 
 </head>
 
@@ -95,7 +95,7 @@
 
   </div>
 
-  <script src="script.js"></script>
+  <script src="/clock/script.js"></script>
 
 </body>
 
