--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-<h2 class="main-heading">Daily Top by : Kasim</h2>
+<h2 class="main-heading">Daily Top by : Qasim saifi</h2>
 <div class="category">
     <input id="input" placeholder="education , business , sports etc." type="text">
   <button  id="btn">🔍</button>     
